[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/spritesheets/chakram_02_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/weapons/SawBlade.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0013

[sub_resource type="CircleShape2D" id=2]
radius = 7.77064

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 55, 55 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 55, 0, 55, 55 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 110, 0, 55, 55 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 165, 0, 55, 55 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 17.0
} ]

[node name="SawBlade" type="Area2D" groups=[
"treadmill",
]]
position = Vector2( 0, -28 )
monitorable = false
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.21022, 0.420448 )
shape = SubResource( 1 )

[node name="CollectionBox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionBox"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
frame = 3
playing = true

[node name="ExtendTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpinDamageTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="." to="." method="_on_SawBlade_body_entered"]
[connection signal="area_entered" from="CollectionBox" to="." method="_on_CollectionBox_area_entered"]
